fix: added overflow hidden

--- a/src/pages/Kitchen/Interwood1.scss
+++ b/src/pages/Kitchen/Interwood1.scss
@@ -52,6 +52,7 @@
   display: flex;
   width: 100%;
   padding-top: 8rem;
+  overflow: hidden;
   // padding-bottom: 8rem;
   justify-content: space-between;
   padding-left: 7rem;
